Revert removal of sun.security module opener from JUnit args.