@@ -3995,6 +3995,7 @@
           --add-opens java.base/java.nio=ALL-UNNAMED
           --add-opens=java.base/java.util=ALL-UNNAMED
           --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+          --add-opens java.security.jgss/sun.security.krb5=ALL-UNNAMED
         </junit.args>
       </properties>
     </profile>
